# poc-opencv

./: .gitignore  CMakeLists.txt  CMakePresets.json  Helpers.h  ImageTransformer.cpp  ImageTransformer.h  README.md  UIWindow.cpp  UIWindow.h  poc-opencv.cpp  poc-opencv.h  vcpkg.json
